= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 2.0.1 (2022-05-21) - @mojavelinux

Bug Fixes::

* scale inline image to fit within available height of page, accounting for the top padding of the line and the bottom gutter (#2193)
* short-circuit formatted_text routine and log error if fragments in first line cannot fit on a new page
* break and wrap long contiguous text in source block when linenums are enabled (#2198)

=== Details

{url-repo}/releases/tag/v2.0.1[git tag] | {url-repo}/compare/v2.0.0\...v2.0.1[full diff]

== 2.0.0 (2022-05-18) - @mojavelinux

Improvements::

* use more stable approach to recreating current bounds in scratch document
* add foundation to support multi-column layout for the body of an article (using an extended converter only)

=== Details

{url-repo}/releases/tag/v2.0.0[git tag] | {url-repo}/compare/v2.0.0.rc.1\...v2.0.0[full diff]

== 2.0.0.rc.1 (2022-05-17) - @mojavelinux

Enhancements::

* allow theme to position caption for code and example blocks below block using `caption-end` key (#1730)
* allow hyphenation to be turned on and configured using the `base-hyphens` key in the theme (#2161)
* replace `docdir` attribute reference in value of `pdf-themesdir` and `pdf-fontsdir` attributes (if not already replaced) (#412)
* split out `start_title_page` method from `ink_title_page` to make customization of the title page simpler using an extended converter
* introduce `start_toc_page` method to handle positioning cursor at first page of TOC

Improvements::

* reclassify and mark which methods in the converter are private
* organize methods in converter
* add DOM traversal methods to simplify the logic in the converter